preparing for ski trip

--- a/LightSwitch/platformio.ini
+++ b/LightSwitch/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
 extra_configs = ~/platformio/common_pio_config.ini
-default_envs = wifi
+;default_envs = wifi
 
 [common]
 ;syslog override
@@ -36,28 +36,19 @@ lib_deps = ${extra.lib_deps}
 platform = espressif8266
 board = esp01_1m
 framework = arduino
-build_flags = ${extra.build_flags} -D 'DEVICE_HOSTNAME="iot-hobbyswitch"'
+build_flags = ${extra.build_flags} -D 'DEVICE_HOSTNAME="iot-hobbyswitch"' -D 'RELAY_PIN=3'
 lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
-upload_port = ${extra.hostname}
+upload_port = iot-hobbyswitch
 lib_deps = ${extra.lib_deps}
 
-[env:compdeskwtich]
+[env:compdeskswitch]
 platform = espressif8266
 board = esp01_1m
 framework = arduino
-build_flags = ${extra.build_flags} -D 'DEVICE_HOSTNAME="iot-compdeskswitch"'
+build_flags = ${extra.build_flags} -D 'DEVICE_HOSTNAME="iot-compdeskswitch"' -D 'RELAY_PIN=1'
 lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
-upload_port = ${extra.hostname}
+upload_port = iot-compdeskswitch
 lib_deps = ${extra.lib_deps}
 
-[env:wifi]
-platform = espressif8266
-board = esp01_1m
-framework = arduino
-build_flags = ${extra.build_flags}
-lib_extra_dirs = ~/platformio/lib
-upload_protocol = espota
-upload_port = ${extra.hostname}
-lib_deps = ${extra.lib_deps}
