--- a/common_pio_config.ini
+++ b/common_pio_config.ini
@@ -15,21 +15,13 @@ syslog = "192.168.2.10"
 teensy_lib_deps =
   arcao/Syslog
   bblanchon/ArduinoJson
-;  paulstoffregen/Time
   jchristensen/Timezone
   jandrassy/WiFiEspAT
   quicksander/ArduinoHttpServer
-;  marcoschwartz/aREST
-;  celcius-labs/tiny-http
-;  khoih-prog/ESP8266_AT_WebServer
-;  khoih-prog/WiFiWebServer@!=1.10.0
 
 8266_lib_deps = 
   arcao/Syslog
   bblanchon/ArduinoJson
   janelia-arduino/Array
   janelia-arduino/Vector
-;  enjoyneering/LiquidCrystal_I2C
-;  adafruit/Adafruit VEML7700 Library
-;  adafruit/Adafruit ADS1X15
-;  adafruit/Adafruit MCP23017 Arduino Library
+  vshymanskyy/Preferences
