adding nodemcu usb as an env to BOOSTRAP

--- a/ESP-bootstrap/platformio.ini
+++ b/ESP-bootstrap/platformio.ini
@@ -8,11 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-extra_configs = ~/platformio/common_pio_config.ini
+extra_configs = ~rsteenbu/platformio/common_pio_config.ini
 
 [extra]
 hostname = iot-bootstrap
-build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"'
+build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"' -D 'SYSLOG_SERVER=${common.syslog}' -D 'SYSLOG_PORT=514'
+8266_lib_deps = 
+  adafruit/Adafruit BusIO
+;  apsol/LittleFSMock
 
 [env:esp01usb]
 platform = espressif8266
@@ -21,7 +24,6 @@ framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 lib_deps = ${common.8266_lib_deps}
-  adafruit/Adafruit BusIO
 
 [env:esp01wifi]
 platform = espressif8266
@@ -32,7 +34,6 @@ lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
 lib_deps = ${common.8266_lib_deps}
-  adafruit/Adafruit BusIO
 
 [env:esp32usb]
 platform = espressif32
@@ -42,7 +43,6 @@ build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 monitor_speed = 115200
 lib_deps = ${common.8266_lib_deps}
-  adafruit/Adafruit BusIO
 
 [env:esp32wifi]
 platform = espressif32
@@ -53,7 +53,6 @@ lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
 lib_deps = ${common.8266_lib_deps}
-  adafruit/Adafruit BusIO
 
 [env:d1miniusb]
 platform = espressif8266
@@ -63,7 +62,6 @@ build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 monitor_speed = 115200
 lib_deps = ${common.8266_lib_deps}
-  adafruit/Adafruit BusIO
 
 [env:d1miniwifi]
 platform = espressif8266
@@ -74,4 +72,12 @@ lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
 lib_deps = ${common.8266_lib_deps}
-  adafruit/Adafruit BusIO
+
+[env:nodemcuusb]
+platform = espressif8266
+board = nodemcuv2
+framework = arduino
+build_flags = ${extra.build_flags}
+lib_extra_dirs = ~/platformio/lib
+monitor_speed = 115200
+lib_deps = ${common.8266_lib_deps} ${extra.8266_lib_deps}
