--- a/common_pio_config.ini
+++ b/common_pio_config.ini
@@ -17,11 +17,11 @@ teensy_lib_deps =
   bblanchon/ArduinoJson
   jchristensen/Timezone
   jandrassy/WiFiEspAT
-  quicksander/ArduinoHttpServer
+;  quicksander/ArduinoHttpServer
 
 8266_lib_deps = 
   arcao/Syslog
   bblanchon/ArduinoJson
   janelia-arduino/Array
   janelia-arduino/Vector
-  vshymanskyy/Preferences
+;  vshymanskyy/Preferences
