fixing merge conflict

--- a/LightSwitch/platformio.ini
+++ b/LightSwitch/platformio.ini
@@ -52,3 +52,13 @@ upload_protocol = espota
 upload_port = iot-compdeskswitch
 lib_deps = ${extra.lib_deps}
 
+[env:backyardshed]
+platform = espressif8266
+board = esp01_1m
+framework = arduino
+build_flags = ${extra.build_flags} -D 'DEVICE_HOSTNAME="iot-backyardshed"' -D 'RELAY_PIN=1'
+lib_extra_dirs = ~/platformio/lib
+upload_protocol = espota
+upload_port = iot-backyardshed
+lib_deps = ${extra.lib_deps}
+
