fixing board in platforio.ini

--- a/BackyardShed/platformio.ini
+++ b/BackyardShed/platformio.ini
@@ -25,8 +25,8 @@ lib_deps = ${common.8266_lib_deps}
 
 [env:usb]
 platform = espressif8266
-board = d1_mini
-;board = esp01_1m
+;board = d1_mini
+board = esp01_1m
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
