getting garagedoor working again

--- a/GarageDoor/platformio.ini
+++ b/GarageDoor/platformio.ini
@@ -14,8 +14,7 @@ default_envs = wifi
 [extra]
 hostname = iot-garagedoor
 build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"' -D 'SYSLOG_SERVER=${common.syslog}' -D 'SYSLOG_PORT=514'
-8266_lib_deps = 
-  paulstoffregen/OneWire
+8266_lib_deps = ${common.8266_lib_deps} 
   adafruit/Adafruit MCP23017 Arduino Library
   adafruit/Adafruit ADS1X15
   adafruit/Adafruit VEML7700 Library
@@ -26,7 +25,7 @@ board = nodemcuv2
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
-lib_deps = ${common.8266_lib_deps} ${extra.8266_lib_deps}
+lib_deps = ${extra.8266_lib_deps}
 
 [env:wifi]
 platform = espressif8266
@@ -36,4 +35,4 @@ build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
-lib_deps = ${common.8266_lib_deps} ${extra.8266_lib_deps}
+lib_deps = ${extra.8266_lib_deps}
