small update to garagedoor platformio.ini

--- a/GarageDoor/platformio.ini
+++ b/GarageDoor/platformio.ini
@@ -21,7 +21,7 @@ build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"' -D 
 
 [env:usb]
 platform = espressif8266
-board = nodemcuv2
+board = d1_mini
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
@@ -29,7 +29,7 @@ lib_deps = ${extra.8266_lib_deps}
 
 [env:wifi]
 platform = espressif8266
-board = nodemcuv2
+board = d1_mini
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
