--- a/MotionSensor/platformio.ini
+++ b/MotionSensor/platformio.ini
@@ -21,6 +21,7 @@ framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 lib_deps = ${common.8266_lib_deps}
+  adafruit/Adafruit MCP23017 Arduino Library
 
 [env:wifi]
 platform = espressif8266
@@ -31,3 +32,4 @@ lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
 lib_deps = ${common.8266_lib_deps}
+  adafruit/Adafruit MCP23017 Arduino Library
