moving change forward

--- a/ESP-bootstrap/platformio.ini
+++ b/ESP-bootstrap/platformio.ini
@@ -13,8 +13,7 @@ extra_configs = ~rsteenbu/platformio/common_pio_config.ini
 [extra]
 hostname = iot-bootstrap
 build_flags = ${common.build_flags} -D 'DEVICE_HOSTNAME="${extra.hostname}"' -D 'SYSLOG_SERVER=${common.syslog}' -D 'SYSLOG_PORT=514'
-8266_lib_deps = 
-  adafruit/Adafruit BusIO
+8266_lib_deps = ${common.8266_lib_deps} 
 
 [env:esp01usb]
 platform = espressif8266
@@ -22,7 +21,7 @@ board = esp01_1m
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
-lib_deps = ${common.8266_lib_deps}
+lib_deps = ${extra.8266_lib_deps}
 
 [env:esp01wifi]
 platform = espressif8266
@@ -32,16 +31,15 @@ build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
-lib_deps = ${common.8266_lib_deps}
+lib_deps = ${extra.8266_lib_deps}
 
-[env:esp32usb]
 platform = espressif32
 board = esp32dev
 framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 monitor_speed = 115200
-lib_deps = ${common.8266_lib_deps}
+lib_deps = ${extra.8266_lib_deps}
 
 [env:esp32wifi]
 platform = espressif32
@@ -51,7 +49,7 @@ build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
-lib_deps = ${common.8266_lib_deps}
+lib_deps = ${extra.8266_lib_deps}
 
 [env:d1miniusb]
 platform = espressif8266
@@ -60,7 +58,7 @@ framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 monitor_speed = 115200
-lib_deps = ${common.8266_lib_deps}
+lib_deps = ${extra.8266_lib_deps}
 
 [env:d1miniwifi]
 platform = espressif8266
@@ -70,7 +68,7 @@ build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 upload_protocol = espota
 upload_port = ${extra.hostname}
-lib_deps = ${common.8266_lib_deps}
+lib_deps = ${extra.8266_lib_deps}
 
 [env:nodemcuusb]
 platform = espressif8266
@@ -79,4 +77,25 @@ framework = arduino
 build_flags = ${extra.build_flags}
 lib_extra_dirs = ~/platformio/lib
 monitor_speed = 115200
-lib_deps = ${common.8266_lib_deps} ${extra.8266_lib_deps}
+lib_deps = ${extra.8266_lib_deps}
+  adafruit/Adafruit BusIO
+
+[env:picousb]
+platform = espressif32
+board = pico32
+framework = arduino
+build_flags = ${extra.build_flags}
+lib_extra_dirs = ~/platformio/lib
+monitor_speed = 115200
+lib_deps = ${extra.8266_lib_deps}
+
+[env:picowifi]
+platform = espressif32
+board = pico32
+framework = arduino
+build_flags = ${extra.build_flags}
+lib_extra_dirs = ~/platformio/lib
+upload_protocol = espota
+upload_port = ${extra.hostname}
+monitor_speed = 115200
+lib_deps = ${extra.8266_lib_deps}
